--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="./assets/avatar.png" alt="Foto de Perfil Patricia Biscuit" />
-        <p>@patricia.biscuit</p>
+        <img src="./assets/avatar.png" alt="Foto de Perfil Eric" />
+        <p>@eric.boeno</p>
         <p></p>
       </div>
 
@@ -29,23 +29,41 @@
 
       <ul>
         <li>
-          <a href="https://www.canva.com/design/DAFoLYsSoM0/3xX1XNLFcwfHCRKm26grFg/edit?utm_content=DAFoLYsSoM0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">Conheça meus produtos</a>
+          <a href="#">Inscreva - Se</a>
         </li>
         <li>
-          
+          <a href="#">Acesse meu curso</a>
+        </li>
+        <li>
+          <a href="#">Cursos</a>
+        </li>
+        <li>
+          <a href="https://rocketseat.com.br/explorer" target="_blank"
+            >Sobre nós</a
+          >
         </li>
       </ul>
       <div id="social-links">
+        <a href="https://github.com/ericgustavo05" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://www.instagram.com/patricia.biscuit/" target="_blank">
+        <a href="https://instagram.com/eric.boeno" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.facebook.com/patricia.queiroz.58118" target="_blank">
+        <a href="https://www.facebook.com/eric.boeno.9" target="_blank">
           <ion-icon name="logo-facebook"></ion-icon>
         </a>
+        <a
+          href="https://www.linkedin.com/in/eric-gustavo-boeno-2ab359181/"
+          target="_blank"
+        >
+          <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
-      <footer>Feito com ♥</footer>
+      <footer>
+        Feito com ♥ pela
+        <a href="https://rocketseat.com.br/" target="_blank">Rocketseat</a>
+      </footer>
     </div>
 
     <script
